--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "yudao-ui-admin-vue3",
-  "version": "1.7.3-snapshot",
-  "description": "基于vue3、vite4、element-plus、typesScript",
-  "author": "xingyu",
+  "name": "gontoy-api-frontend",
+  "version": "1.0.0-snapshot",
+  "description": "动态网关管理系统",
+  "author": "gzw",
   "private": false,
   "scripts": {
     "i": "pnpm install",
